--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Password Generator</h1>
+        <h1 class="title">Password Generator :</h1>
         <h3 class="password-display" id="passwordDisplay">password</h3>
+        <button id="copy" onclick="copyPassword()">copy</button>
         <form id="passwordGeneratorForm" class="form">
           <label for="characterAmountNumber">Number Of Characters</label>
           <div class="character-amount-container">
