--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <h1 class="title">Password Generator :</h1>
         <h3 class="password-display" id="passwordDisplay">password</h3>
-        <button id="copy" onclick="copyPassword()">copy</button>
+        <button id="copy" onclick="copyPassword()">Copy</button>
         <form id="passwordGeneratorForm" class="form">
           <label for="characterAmountNumber">Number Of Characters</label>
           <div class="character-amount-container">
